@@ -15,3 +15,6 @@ Bug fixes:
 
 - 64 bit only:  Correctly mmap'ing regions > 4 Gigs.
   Fixes: http://cygwin.com/ml/cygwin/2013-09/msg00155.html
+
+- Fix random content of /proc/$PID/ctty if the process has no controlling
+  tty.  Set to just "\n" instead.
